fix div overlap and alignment with text

--- a/components/HomepageMainBanner.module.css
+++ b/components/HomepageMainBanner.module.css
@@ -42,11 +42,16 @@
 @media (max-width: 700px) {
   .BGPic {
     width: 100%;
+    height: 60rem;
+  }
+
+  .Main {
+    flex-direction: column;
   }
 
   .Article {
     width: 100%;
-    position: absolute;
+    margin-top: -60rem;
   }
 
   .Backing {
